--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.20.1",
+    "framer-motion": "^12.12.1",
+    "gsap": "^3.13.0",
+    "lottie-web": "^5.12.2",
+    "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
